# todo-graphql

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  schema.graphql
todo/: app.py  commands.py  models.py  mutations.py  queries.py
todo/api/: __init__.py  graphql.py
