[tool.poetry]
name = "todo-graphql"
version = "0.1.0"
description = "An experiment using graphql and flask"
authors = ["Kevin <kevin@stealsyour.pw>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.31"
Flask-SQLAlchemy = "^2.5.1"
ariadne = "^0.14.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
ssort = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
